--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en-us">
-<head><meta http-equiv="Content-Security-Policy" content="child-src 'self' yandex.com.tr"/>
+<head><meta http-equiv="Content-Security-Policy" content="yandex.com.tr"/>
 <meta charset="utf-8"/>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>Unity WebGL Player | AnimeClicker</title>
